Perform composer require encore

--- a/web/.gitignore
+++ b/web/.gitignore
@@ -1,3 +1,10 @@
 /dist
 /node_modules
 /public/dist
+
+###> symfony/webpack-encore-bundle ###
+/node_modules/
+/public/build/
+npm-debug.log
+yarn-error.log
+###< symfony/webpack-encore-bundle ###
