--- a/web/package.json
+++ b/web/package.json
@@ -19,5 +19,8 @@
         "dev": "encore dev",
         "watch": "encore dev --watch",
         "build": "encore production --progress"
+    },
+    "dependencies": {
+        "@fontsource/roboto-condensed": "^4.5.9"
     }
 }
