--- a/web/config/packages/webpack_encore.yaml
+++ b/web/config/packages/webpack_encore.yaml
@@ -9,10 +9,11 @@ webpack_encore:
         defer: true
         # Uncomment (also under link_attributes) if using Turbo Drive
         # https://turbo.hotwired.dev/handbook/drive#reloading-when-assets-change
-        # 'data-turbo-track': reload
-    # link_attributes:
+        'data-turbo-track': reload
+    link_attributes:
         # Uncomment if using Turbo Drive
-        # 'data-turbo-track': reload
+        'data-turbo-track': reload
+    #<link data-turbo.track="reload" # needed when deploy a new version to force a new page reload
 
     # If using Encore.enableIntegrityHashes() and need the crossorigin attribute (default: false, or use 'anonymous' or 'use-credentials')
     # crossorigin: 'anonymous'
