Show toast when adding a new song to a mix

--- a/web/package.json
+++ b/web/package.json
@@ -25,6 +25,7 @@
         "build": "encore production --progress"
     },
     "dependencies": {
-        "@fontsource/roboto-condensed": "^4.5.9"
+        "@fontsource/roboto-condensed": "^4.5.9",
+        "@popperjs/core": "^2.11.6"
     }
 }
