--- a/web/composer.json
+++ b/web/composer.json
@@ -26,6 +26,7 @@
         "symfony/security-bundle": "6.2.*",
         "symfony/twig-bundle": "6.2.*",
         "symfony/ux-autocomplete": "^2.5",
+        "symfony/ux-live-component": "^2.5",
         "symfony/ux-turbo": "^2.5",
         "symfony/validator": "6.2.*",
         "symfony/webpack-encore-bundle": "^1.16",
